deploy: cc9b1f0165e4612128a4987c11f0c0aace48fcdd

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -667,7 +667,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Карпович Владислав Андреевич</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://proselyte.net/tutorials/hibernate-tutorial/simple-application/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/simple-application/</a>, <a href="https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/</a></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Need to fix</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Yes</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Климахович Владислав Игоревич</p></td>
@@ -1154,7 +1154,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-17 04:55:26 UTC
+Last updated 2022-01-19 14:27:58 UTC
 </div>
 </div>
 </body>
