--- a/links.html
+++ b/links.html
@@ -574,6 +574,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="https://youtu.be/ToLGj3iEPcw" target="_blank" rel="noopener">Lesson 13: Intro to Hibernate</a></p>
 </li>
+<li>
+<p><a href="https://youtu.be/at9aFK2fgGE" target="_blank" rel="noopener">Lesson 14: Hibernate. Basic Mapping</a></p>
+</li>
 </ul>
 </div>
 </div>
@@ -597,7 +600,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-19 14:29:22 UTC
+Last updated 2022-01-19 14:42:55 UTC
 </div>
 </div>
 </body>
