deploy: 7790a78e057201baeb6e2a6df5726fc4808d590c

--- a/index.html
+++ b/index.html
@@ -466,6 +466,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_lesson_12_intro_to_jpa">2.12. Lesson 12: Intro to JPA</a></li>
 <li><a href="#_lesson_13_intro_to_hibernate">2.13. Lesson 13: Intro to Hibernate</a></li>
 <li><a href="#_lesson_14_basic_mapping">2.14. Lesson 14: Basic Mapping</a></li>
+<li><a href="#_lesson_15_mapping_hierarchy">2.15. Lesson 15: Mapping Hierarchy</a></li>
 </ul>
 </li>
 <li><a href="#_project">3. Project</a>
@@ -1320,6 +1321,29 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 </div>
+<div class="sect2">
+<h3 id="_lesson_15_mapping_hierarchy">2.15. Lesson 15: Mapping Hierarchy</h3>
+<div class="sect3">
+<h4 id="_practice_15">2.15.1. Practice</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Выполнить <a href="https://github.com/rakovets/course-java-data-persistence/blob/master/07-mapping-hierarchy/src/main/resources/mapping-hierarchy.adoc">Mapping Hierarchy</a></p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_homework_15">2.15.2. Homework</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Изучить теоретический материал.</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
 </div>
 </div>
 <div class="sect1">
@@ -2099,7 +2123,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-19 14:42:55 UTC
+Last updated 2022-01-19 16:33:08 UTC
 </div>
 </div>
 </body>
