--- a/lessons/index.html
+++ b/lessons/index.html
@@ -1151,10 +1151,35 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 </div>
+<div class="sect1">
+<h2 id="_lesson_15_mapping_hierarchy">Lesson 15: Mapping Hierarchy</h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="_practice_15">Practice</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Выполнить <a href="https://github.com/rakovets/course-java-data-persistence/blob/master/07-mapping-hierarchy/src/main/resources/mapping-hierarchy.adoc">Mapping Hierarchy</a></p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_homework_15">Homework</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Изучить теоретический материал.</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-19 14:42:55 UTC
+Last updated 2022-01-19 16:33:08 UTC
 </div>
 </div>
 </body>
