--- a/lessons/index.html
+++ b/lessons/index.html
@@ -1159,7 +1159,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p>Выполнить <a href="https://github.com/rakovets/course-java-data-persistence/blob/master/07-mapping-inheritance/src/main/resources/mapping-inheritance.adoc">Mapping Hierarchy</a></p>
+<p>Выполнить <a href="https://github.com/rakovets/course-java-data-persistence/blob/master/07-mapping-inheritance/src/main/resources/mapping-inheritance.adoc">Mapping Inheritance</a></p>
 </li>
 </ul>
 </div>
@@ -1179,7 +1179,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-19 16:36:35 UTC
+Last updated 2022-01-19 16:37:28 UTC
 </div>
 </div>
 </body>
