deploy: 42fc05d32680fc514b7121a692de778c2bcd93c8

--- a/links.html
+++ b/links.html
@@ -577,6 +577,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="https://youtu.be/at9aFK2fgGE" target="_blank" rel="noopener">Lesson 14: Hibernate. Basic Mapping</a></p>
 </li>
+<li>
+<p><a href="https://youtu.be/RNeUZKSU5l8" target="_blank" rel="noopener">Lesson 15: Hibernate. Mapping Hierarchy</a></p>
+</li>
 </ul>
 </div>
 </div>
@@ -600,7 +603,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-19 16:37:28 UTC
+Last updated 2022-01-22 04:51:09 UTC
 </div>
 </div>
 </body>
