deploy: 1f2bfe95ab6f961fdb2ccf9b1130ce36b210c5af

--- a/index.html
+++ b/index.html
@@ -477,7 +477,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_versioning">3.4. Versioning</a></li>
 <li><a href="#_stage_04_инициализация_maven_проекта">3.5. Stage 04: Инициализация maven-проекта</a></li>
 <li><a href="#_stage_05_разработка_data_access_layer">3.6. Stage 05: Разработка Data Access Layer</a></li>
-<li><a href="#_themes_for_the_projects">3.7. Themes for the projects</a></li>
+<li><a href="#_stage_06_разработка_presentation_layer">3.7. Stage 06: Разработка Presentation Layer</a></li>
+<li><a href="#_themes_for_the_projects">3.8. Themes for the projects</a></li>
 </ul>
 </li>
 </ul>
@@ -1728,7 +1729,42 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="sect2">
-<h3 id="_themes_for_the_projects">3.7. Themes for the projects</h3>
+<h3 id="_stage_06_разработка_presentation_layer">3.7. Stage 06: Разработка Presentation Layer</h3>
+<div class="paragraph">
+<p>На этом этапе создает <strong>Presentation Layer</strong> (<strong>слой представления</strong>) для приложения, который будет каким-то образом отображать данные для клиента.</p>
+</div>
+<div class="sect3">
+<h4 id="_tasks_6">3.7.1. Tasks</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Реализовать <strong>navbar</strong> общий для всех страниц, для удобной навигации в web-приложении.</p>
+</li>
+<li>
+<p>Реализовать все необходимые страницы в рамках текущей версии проекта.</p>
+</li>
+<li>
+<p>Улучшить внешний вид web-приложения за счет использования toolkit <strong>Bootstrap</strong>.</p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_example_6">3.7.2. Example</h4>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="http://ec2-3-71-2-193.eu-central-1.compute.amazonaws.com:8080/ih/" target="_blank" rel="noopener">Interview Helper as web-application</a></p>
+</li>
+<li>
+<p><a href="https://github.com/JD2-86/interview-helper" target="_blank" rel="noopener">Interview Helper as project</a></p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_themes_for_the_projects">3.8. Themes for the projects</h3>
 <div class="paragraph">
 <p>В качестве темы для проекта можно выбрать любую тему, но ЖЕЛАТЕЛЬНО выбрать тему, которая нравится или близка конкретно Вам. Так же в основе проекта можно заложить какую-то интересную идею.</p>
 </div>
@@ -1736,7 +1772,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Нижеперечисленные темы, действия в системе и модели являются лишь примерами и подлежат более детальному анализу и декомпозиции.</p>
 </div>
 <div class="sect3">
-<h4 id="_видеотека">3.7.1. Видеотека</h4>
+<h4 id="_видеотека">3.8.1. Видеотека</h4>
 <div class="sect4">
 <h5 id="_модели">Модели.</h5>
 <div class="olist arabic">
@@ -1863,7 +1899,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="sect3">
-<h4 id="_интернет_магазин">3.7.2. Интернет-магазин.</h4>
+<h4 id="_интернет_магазин">3.8.2. Интернет-магазин.</h4>
 <div class="sect4">
 <h5 id="_модели_2">Модели.</h5>
 <div class="olist arabic">
@@ -1993,7 +2029,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="sect3">
-<h4 id="_обучение">3.7.3. Обучение.</h4>
+<h4 id="_обучение">3.8.3. Обучение.</h4>
 <div class="ulist">
 <ul>
 <li>
@@ -2009,7 +2045,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="sect3">
-<h4 id="_платежи">3.7.4. Платежи.</h4>
+<h4 id="_платежи">3.8.4. Платежи.</h4>
 <div class="ulist">
 <ul>
 <li>
@@ -2025,7 +2061,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="sect3">
-<h4 id="_вступительные_экзамены">3.7.5. Вступительные экзамены.</h4>
+<h4 id="_вступительные_экзамены">3.8.5. Вступительные экзамены.</h4>
 <div class="ulist">
 <ul>
 <li>
@@ -2041,7 +2077,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="sect3">
-<h4 id="_городской_транспорт">3.7.6. Городской транспорт.</h4>
+<h4 id="_городской_транспорт">3.8.6. Городской транспорт.</h4>
 <div class="ulist">
 <ul>
 <li>
@@ -2057,7 +2093,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="sect3">
-<h4 id="_заказ_гостиницы">3.7.7. Заказ гостиницы.</h4>
+<h4 id="_заказ_гостиницы">3.8.7. Заказ гостиницы.</h4>
 <div class="ulist">
 <ul>
 <li>
@@ -2079,7 +2115,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="sect3">
-<h4 id="_прокат_автомобилей">3.7.8. Прокат автомобилей.</h4>
+<h4 id="_прокат_автомобилей">3.8.8. Прокат автомобилей.</h4>
 <div class="ulist">
 <ul>
 <li>
@@ -2101,23 +2137,23 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="sect3">
-<h4 id="_интернет_провайдер">3.7.9. Интернет-провайдер.</h4>
+<h4 id="_интернет_провайдер">3.8.9. Интернет-провайдер.</h4>
 
 </div>
 <div class="sect3">
-<h4 id="_аукцион">3.7.10. Аукцион.</h4>
+<h4 id="_аукцион">3.8.10. Аукцион.</h4>
 
 </div>
 <div class="sect3">
-<h4 id="_тотализатор">3.7.11. Тотализатор.</h4>
+<h4 id="_тотализатор">3.8.11. Тотализатор.</h4>
 
 </div>
 <div class="sect3">
-<h4 id="_социологический_опросник">3.7.12. Социологический Опросник.</h4>
+<h4 id="_социологический_опросник">3.8.12. Социологический Опросник.</h4>
 
 </div>
 <div class="sect3">
-<h4 id="_аудиовидеоигротека">3.7.13. Аудио/Видео/Игротека.</h4>
+<h4 id="_аудиовидеоигротека">3.8.13. Аудио/Видео/Игротека.</h4>
 
 </div>
 </div>
@@ -2126,7 +2162,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-22 04:55:57 UTC
+Last updated 2022-01-22 04:58:35 UTC
 </div>
 </div>
 </body>
