--- a/project/index.html
+++ b/project/index.html
@@ -473,6 +473,12 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_example_5">Example</a></li>
 </ul>
 </li>
+<li><a href="#_stage_06_разработка_presentation_layer">Stage 06: Разработка Presentation Layer</a>
+<ul class="sectlevel2">
+<li><a href="#_tasks_6">Tasks</a></li>
+<li><a href="#_example_6">Example</a></li>
+</ul>
+</li>
 <li><a href="#_themes_for_the_projects">Themes for the projects</a>
 <ul class="sectlevel2">
 <li><a href="#_видеотека">Видеотека</a></li>
@@ -886,6 +892,43 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="sect1">
+<h2 id="_stage_06_разработка_presentation_layer">Stage 06: Разработка Presentation Layer</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>На этом этапе создает <strong>Presentation Layer</strong> (<strong>слой представления</strong>) для приложения, который будет каким-то образом отображать данные для клиента.</p>
+</div>
+<div class="sect2">
+<h3 id="_tasks_6">Tasks</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Реализовать <strong>navbar</strong> общий для всех страниц, для удобной навигации в web-приложении.</p>
+</li>
+<li>
+<p>Реализовать все необходимые страницы в рамках текущей версии проекта.</p>
+</li>
+<li>
+<p>Улучшить внешний вид web-приложения за счет использования toolkit <strong>Bootstrap</strong>.</p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_example_6">Example</h3>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="http://ec2-3-71-2-193.eu-central-1.compute.amazonaws.com:8080/ih/" target="_blank" rel="noopener">Interview Helper as web-application</a></p>
+</li>
+<li>
+<p><a href="https://github.com/JD2-86/interview-helper" target="_blank" rel="noopener">Interview Helper as project</a></p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+<div class="sect1">
 <h2 id="_themes_for_the_projects">Themes for the projects</h2>
 <div class="sectionbody">
 <div class="paragraph">
@@ -1284,7 +1327,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-22 04:55:57 UTC
+Last updated 2022-01-22 04:58:35 UTC
 </div>
 </div>
 </body>
