deploy: b37acd829d941b1f60f1b6aedba91ea7bc43868e

--- a/index.html
+++ b/index.html
@@ -467,6 +467,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_lesson_13_intro_to_hibernate">2.13. Lesson 13: Intro to Hibernate</a></li>
 <li><a href="#_lesson_14_basic_mapping">2.14. Lesson 14: Basic Mapping</a></li>
 <li><a href="#_lesson_15_mapping_hierarchy">2.15. Lesson 15: Mapping Hierarchy</a></li>
+<li><a href="#_lesson_16_mapping_relationship">2.16. Lesson 16: Mapping Relationship</a></li>
 </ul>
 </li>
 <li><a href="#_project">3. Project</a>
@@ -1348,6 +1349,29 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 </div>
+<div class="sect2">
+<h3 id="_lesson_16_mapping_relationship">2.16. Lesson 16: Mapping Relationship</h3>
+<div class="sect3">
+<h4 id="_practice_16">2.16.1. Practice</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Выполнить <a href="https://github.com/rakovets/course-java-data-persistence/blob/master/08-mapping-relationship/src/main/resources/mapping-relationship.adoc">Mapping Relationship</a></p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_homework_16">2.16.2. Homework</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Изучить теоретический материал.</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
 </div>
 </div>
 <div class="sect1">
@@ -2162,7 +2186,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-22 04:58:35 UTC
+Last updated 2022-01-24 05:09:04 UTC
 </div>
 </div>
 </body>
