--- a/lessons/index.html
+++ b/lessons/index.html
@@ -1176,10 +1176,35 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 </div>
+<div class="sect1">
+<h2 id="_lesson_16_mapping_relationship">Lesson 16: Mapping Relationship</h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="_practice_16">Practice</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Выполнить <a href="https://github.com/rakovets/course-java-data-persistence/blob/master/08-mapping-relationship/src/main/resources/mapping-relationship.adoc">Mapping Relationship</a></p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_homework_16">Homework</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Изучить теоретический материал.</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-22 04:58:35 UTC
+Last updated 2022-01-24 05:09:04 UTC
 </div>
 </div>
 </body>
