deploy: 30fbd7681ce517f92e976d1ac73b0cd5af170619

--- a/index.html
+++ b/index.html
@@ -468,6 +468,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_lesson_14_basic_mapping">2.14. Lesson 14: Basic Mapping</a></li>
 <li><a href="#_lesson_15_mapping_hierarchy">2.15. Lesson 15: Mapping Hierarchy</a></li>
 <li><a href="#_lesson_16_mapping_relationship">2.16. Lesson 16: Mapping Relationship</a></li>
+<li><a href="#_lesson_17_query_with_jpql">2.17. Lesson 17: Query with JPQL</a></li>
 </ul>
 </li>
 <li><a href="#_project">3. Project</a>
@@ -1372,6 +1373,29 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 </div>
+<div class="sect2">
+<h3 id="_lesson_17_query_with_jpql">2.17. Lesson 17: Query with JPQL</h3>
+<div class="sect3">
+<h4 id="_practice_17">2.17.1. Practice</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Выполнить <a href="https://github.com/rakovets/course-java-data-persistence/blob/master/09-query-jpql/src/main/resources/query-jpql.adoc">Query with JPQL</a></p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_homework_17">2.17.2. Homework</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Изучить теоретический материал.</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
 </div>
 </div>
 <div class="sect1">
@@ -2186,7 +2210,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-24 05:09:04 UTC
+Last updated 2022-01-26 03:51:03 UTC
 </div>
 </div>
 </body>
