--- a/lessons/index.html
+++ b/lessons/index.html
@@ -1201,10 +1201,35 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 </div>
+<div class="sect1">
+<h2 id="_lesson_17_query_with_jpql">Lesson 17: Query with JPQL</h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="_practice_17">Practice</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Выполнить <a href="https://github.com/rakovets/course-java-data-persistence/blob/master/09-query-jpql/src/main/resources/query-jpql.adoc">Query with JPQL</a></p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_homework_17">Homework</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Изучить теоретический материал.</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-24 05:09:04 UTC
+Last updated 2022-01-26 03:51:03 UTC
 </div>
 </div>
 </body>
