deploy: 3a009b41027caa1254a58c65268e5bf23ec4d230

--- a/index.html
+++ b/index.html
@@ -469,6 +469,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_lesson_15_mapping_hierarchy">2.15. Lesson 15: Mapping Hierarchy</a></li>
 <li><a href="#_lesson_16_mapping_relationship">2.16. Lesson 16: Mapping Relationship</a></li>
 <li><a href="#_lesson_17_query_with_jpql">2.17. Lesson 17: Query with JPQL</a></li>
+<li><a href="#_lesson_18_query_with_criteria_api">2.18. Lesson 18: Query with Criteria API</a></li>
 </ul>
 </li>
 <li><a href="#_project">3. Project</a>
@@ -1396,6 +1397,29 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 </div>
+<div class="sect2">
+<h3 id="_lesson_18_query_with_criteria_api">2.18. Lesson 18: Query with Criteria API</h3>
+<div class="sect3">
+<h4 id="_practice_18">2.18.1. Practice</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Выполнить <a href="https://github.com/rakovets/course-java-data-persistence/blob/master/10-query-criteria/src/main/resources/rbac-db-schema.png">Query with Criteria API</a></p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_homework_18">2.18.2. Homework</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Изучить теоретический материал.</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
 </div>
 </div>
 <div class="sect1">
@@ -2210,7 +2234,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-26 04:26:39 UTC
+Last updated 2022-01-31 17:00:12 UTC
 </div>
 </div>
 </body>
