--- a/lessons/index.html
+++ b/lessons/index.html
@@ -1226,10 +1226,35 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 </div>
+<div class="sect1">
+<h2 id="_lesson_18_query_with_criteria_api">Lesson 18: Query with Criteria API</h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="_practice_18">Practice</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Выполнить <a href="https://github.com/rakovets/course-java-data-persistence/blob/master/10-query-criteria/src/main/resources/rbac-db-schema.png">Query with Criteria API</a></p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_homework_18">Homework</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Изучить теоретический материал.</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-26 04:26:39 UTC
+Last updated 2022-01-31 17:00:12 UTC
 </div>
 </div>
 </body>
