--- a/index.html
+++ b/index.html
@@ -1404,7 +1404,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p>Выполнить <a href="https://github.com/rakovets/course-java-data-persistence/blob/master/10-query-criteria/src/main/resources/rbac-db-schema.png">Query with Criteria API</a></p>
+<p>Выполнить <a href="https://github.com/rakovets/course-java-data-persistence/blob/master/10-query-criteria/src/main/resources/query-criteria.adoc">Query with Criteria API</a></p>
 </li>
 </ul>
 </div>
@@ -2234,7 +2234,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-31 17:00:12 UTC
+Last updated 2022-01-31 17:08:58 UTC
 </div>
 </div>
 </body>
