deploy: b241fc4f7256a385d21d49b8a9efd835cc11339f

--- a/links.html
+++ b/links.html
@@ -580,6 +580,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="https://youtu.be/RNeUZKSU5l8" target="_blank" rel="noopener">Lesson 15: Hibernate. Mapping Hierarchy</a></p>
 </li>
+<li>
+<p><a href="https://youtu.be/d0C9N870w5o" target="_blank" rel="noopener">Lesson 18: Hibernate. Criteria API</a></p>
+</li>
 </ul>
 </div>
 </div>
@@ -603,7 +606,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-01-31 17:08:58 UTC
+Last updated 2022-02-01 15:31:31 UTC
 </div>
 </div>
 </body>
