deploy: 001ca63a7eb898a56f49e33bf010994296cf6c69

--- a/index.html
+++ b/index.html
@@ -631,6 +631,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="https://youtu.be/d0C9N870w5o" target="_blank" rel="noopener">Lesson 18: Hibernate. Criteria API</a></p>
 </li>
+<li>
+<p><a href="https://youtu.be/ZM26gQxVtU0" target="_blank" rel="noopener">Lesson 19: Hibernate. Transactions. Cache</a></p>
+</li>
 </ul>
 </div>
 </div>
@@ -2237,7 +2240,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-02-01 15:31:31 UTC
+Last updated 2022-02-04 07:24:17 UTC
 </div>
 </div>
 </body>
