deploy: 3f64c6737db8c5c041c50a219b7f9b5a8d555ffd

--- a/index.html
+++ b/index.html
@@ -470,6 +470,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_lesson_16_mapping_relationship">2.16. Lesson 16: Mapping Relationship</a></li>
 <li><a href="#_lesson_17_query_with_jpql">2.17. Lesson 17: Query with JPQL</a></li>
 <li><a href="#_lesson_18_query_with_criteria_api">2.18. Lesson 18: Query with Criteria API</a></li>
+<li><a href="#_lesson_19_transaction_process_transactions_cache">2.19. Lesson 19: Transaction process. Transactions. Cache</a></li>
+<li><a href="#_lesson_20_apache_maven_multi_module_profiles">2.20. Lesson 20: Apache Maven. Multi-module. Profiles</a></li>
 </ul>
 </li>
 <li><a href="#_project">3. Project</a>
@@ -1426,6 +1428,62 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 </div>
+<div class="sect2">
+<h3 id="_lesson_19_transaction_process_transactions_cache">2.19. Lesson 19: Transaction process. Transactions. Cache</h3>
+<div class="sect3">
+<h4 id="_practice_19">2.19.1. Practice</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Добавить второй уровень кэша для Hibernate.</p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_homework_19">2.19.2. Homework</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Изучить теоретический материал.</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_lesson_20_apache_maven_multi_module_profiles">2.20. Lesson 20: Apache Maven. Multi-module. Profiles</h3>
+<div class="sect3">
+<h4 id="_practice_20">2.20.1. Practice</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Выполнить задание:</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://github.com/rakovets/course-java-tools/blob/master/apache-maven/multi-modules/src/main/resources/practice/apache-maven-multi-modules.adoc">Apache Maven: Multi-modules project.</a>.</p>
+</li>
+<li>
+<p><a href="https://github.com/rakovets/course-java-tools/blob/master/apache-maven/profiles/src/main/resources/practice/apache-maven-profiles.adoc">Apache Maven: Profiles.</a>.</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_homework_20">2.20.2. Homework</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Изучить теоретический материал.</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
 </div>
 </div>
 <div class="sect1">
@@ -2240,7 +2298,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-02-04 07:24:17 UTC
+Last updated 2022-02-14 15:15:40 UTC
 </div>
 </div>
 </body>
