--- a/lessons/index.html
+++ b/lessons/index.html
@@ -1251,10 +1251,70 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 </div>
+<div class="sect1">
+<h2 id="_lesson_19_transaction_process_transactions_cache">Lesson 19: Transaction process. Transactions. Cache</h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="_practice_19">Practice</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Добавить второй уровень кэша для Hibernate.</p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_homework_19">Homework</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Изучить теоретический материал.</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_lesson_20_apache_maven_multi_module_profiles">Lesson 20: Apache Maven. Multi-module. Profiles</h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="_practice_20">Practice</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Выполнить задание:</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://github.com/rakovets/course-java-tools/blob/master/apache-maven/multi-modules/src/main/resources/practice/apache-maven-multi-modules.adoc">Apache Maven: Multi-modules project.</a>.</p>
+</li>
+<li>
+<p><a href="https://github.com/rakovets/course-java-tools/blob/master/apache-maven/profiles/src/main/resources/practice/apache-maven-profiles.adoc">Apache Maven: Profiles.</a>.</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_homework_20">Homework</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Изучить теоретический материал.</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-02-04 07:24:17 UTC
+Last updated 2022-02-14 15:15:40 UTC
 </div>
 </div>
 </body>
