--- a/index.html
+++ b/index.html
@@ -1462,10 +1462,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p><a href="https://github.com/rakovets/course-java-tools/blob/master/apache-maven/multi-modules/src/main/resources/practice/apache-maven-multi-modules.adoc">Apache Maven: Multi-modules project.</a>.</p>
+<p><a href="https://github.com/rakovets/course-java-tools/blob/master/apache-maven/multi-modules/src/main/resources/practice/apache-maven-multi-modules.adoc">Apache Maven: Multi-modules project</a>.</p>
 </li>
 <li>
-<p><a href="https://github.com/rakovets/course-java-tools/blob/master/apache-maven/profiles/src/main/resources/practice/apache-maven-profiles.adoc">Apache Maven: Profiles.</a>.</p>
+<p><a href="https://github.com/rakovets/course-java-tools/blob/master/apache-maven/profiles/src/main/resources/practice/apache-maven-profiles.adoc">Apache Maven: Profiles</a>.</p>
 </li>
 </ul>
 </div>
@@ -2298,7 +2298,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-02-14 15:15:40 UTC
+Last updated 2022-02-14 15:16:07 UTC
 </div>
 </div>
 </body>
