deploy: a4225156eb3c531a03edff3e5020b851fbd7d14c

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -1288,10 +1288,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p><a href="https://github.com/rakovets/course-java-tools/blob/master/apache-maven/multi-modules/src/main/resources/practice/apache-maven-multi-modules.adoc">Apache Maven: Multi-modules project</a>.</p>
+<p><a href="https://github.com/rakovets/course-java-tools/blob/master/apache-maven/multi-modules/src/main/resources/practice/apache-maven-multi-modules.adoc" target="_blank" rel="noopener">Apache Maven: Multi-modules project</a>.</p>
 </li>
 <li>
-<p><a href="https://github.com/rakovets/course-java-tools/blob/master/apache-maven/profiles/src/main/resources/practice/apache-maven-profiles.adoc">Apache Maven: Profiles</a>.</p>
+<p><a href="https://github.com/rakovets/course-java-tools/blob/master/apache-maven/profiles/src/main/resources/practice/apache-maven-profiles.adoc" target="_blank" rel="noopener">Apache Maven: Profiles</a>.</p>
 </li>
 </ul>
 </div>
@@ -1314,7 +1314,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-02-14 15:16:07 UTC
+Last updated 2022-02-14 15:27:12 UTC
 </div>
 </div>
 </body>
