deploy: fa8eb580c06f278b38c2300fb8954427dc06ce10

--- a/index.html
+++ b/index.html
@@ -472,6 +472,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_lesson_18_query_with_criteria_api">2.18. Lesson 18: Query with Criteria API</a></li>
 <li><a href="#_lesson_19_transaction_process_transactions_cache">2.19. Lesson 19: Transaction process. Transactions. Cache</a></li>
 <li><a href="#_lesson_20_apache_maven_multi_module_profiles">2.20. Lesson 20: Apache Maven. Multi-module. Profiles</a></li>
+<li><a href="#_lesson_21_spring_framework_bean">2.21. Lesson 21: Spring Framework. Bean</a></li>
 </ul>
 </li>
 <li><a href="#_project">3. Project</a>
@@ -1484,6 +1485,36 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 </div>
+<div class="sect2">
+<h3 id="_lesson_21_spring_framework_bean">2.21. Lesson 21: Spring Framework. Bean</h3>
+<div class="sect3">
+<h4 id="_practice_21">2.21.1. Practice</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Выполнить задание:</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://github.com/rakovets/course-java-spring/blob/master/spring-framework/bean/src/main/resources/spring-framework-bean.adoc" target="_blank" rel="noopener">Spring Framework. Bean</a>.</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_homework_21">2.21.2. Homework</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Изучить теоретический материал.</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
 </div>
 </div>
 <div class="sect1">
@@ -2298,7 +2329,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-02-14 15:27:12 UTC
+Last updated 2022-02-16 15:28:51 UTC
 </div>
 </div>
 </body>
