--- a/lessons/index.html
+++ b/lessons/index.html
@@ -1311,10 +1311,42 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 </div>
+<div class="sect1">
+<h2 id="_lesson_21_spring_framework_bean">Lesson 21: Spring Framework. Bean</h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="_practice_21">Practice</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Выполнить задание:</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://github.com/rakovets/course-java-spring/blob/master/spring-framework/bean/src/main/resources/spring-framework-bean.adoc" target="_blank" rel="noopener">Spring Framework. Bean</a>.</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_homework_21">Homework</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Изучить теоретический материал.</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-02-14 15:27:12 UTC
+Last updated 2022-02-16 15:28:51 UTC
 </div>
 </div>
 </body>
