deploy: 29744c49caf96f7f21d4830035f730dfa39a7258

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -652,7 +652,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Василевич Виталий Валерьевич</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://proselyte.net/tutorials/hibernate-tutorial/configure/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/configure/</a>, <a href="https://proselyte.net/tutorials/hibernate-tutorial/sessions/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/sessions/</a></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">No</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Fixed by trainer</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Жигалко Евгений Владимирович</p></td>
@@ -672,7 +672,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Климахович Владислав Игоревич</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://proselyte.net/tutorials/hibernate-tutorial/annotations/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/annotations/</a>, <a href="https://proselyte.net/tutorials/hibernate-tutorial/hibernate-query-language/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/hibernate-query-language/</a></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Need to fix</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Fixed and added by trainer</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Коваленко Алексей Петрович</p></td>
@@ -682,7 +682,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Колбасов Илья Николаевич</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://proselyte.net/tutorials/hibernate-tutorial/caching/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/caching/</a>, <a href="https://proselyte.net/tutorials/hibernate-tutorial/batch-processing/" class="bare">https://proselyte.net/tutorials/hibernate-tutorial/batch-processing/</a></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Need to fix</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Fixed by trainer</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Карпович Дмитрий Владимирович</p></td>
@@ -1346,7 +1346,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-02-16 15:28:51 UTC
+Last updated 2022-02-19 05:38:05 UTC
 </div>
 </div>
 </body>
