deploy: f76c6b2124c08fe76c0bca8b5f95bdc9625ffa91

--- a/index.html
+++ b/index.html
@@ -637,6 +637,12 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="https://youtu.be/ZM26gQxVtU0" target="_blank" rel="noopener">Lesson 19: Hibernate. Transactions. Cache</a></p>
 </li>
+<li>
+<p><a href="https://youtu.be/bseMhF9q2fs" target="_blank" rel="noopener">Lesson 20: Apache Maven. Multi-module. Profiles</a></p>
+</li>
+<li>
+<p><a href="https://youtu.be/NeZKHP3P0cE" target="_blank" rel="noopener">Lesson 21: Spring Framework. Bean</a></p>
+</li>
 </ul>
 </div>
 </div>
@@ -2329,7 +2335,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-02-19 05:38:05 UTC
+Last updated 2022-02-20 04:55:05 UTC
 </div>
 </div>
 </body>
