--- a/index.html
+++ b/index.html
@@ -643,6 +643,12 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="https://youtu.be/NeZKHP3P0cE" target="_blank" rel="noopener">Lesson 21: Spring Framework. Bean</a></p>
 </li>
+<li>
+<p><a href="https://youtu.be/9gYTjb6ahCI" target="_blank" rel="noopener">Lesson 22: Spring Framework. Bean lifecycle</a></p>
+</li>
+<li>
+<p><a href="https://youtu.be/NeZKHP3P0cE" target="_blank" rel="noopener">Lesson 23: Spring Framework. ORM</a></p>
+</li>
 </ul>
 </div>
 </div>
@@ -2335,7 +2341,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-02-20 04:55:05 UTC
+Last updated 2022-02-26 03:19:09 UTC
 </div>
 </div>
 </body>
