deploy: ca5be9791d348a6023b5b16efcb5cb95c31f057b

--- a/index.html
+++ b/index.html
@@ -649,6 +649,12 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="https://youtu.be/NeZKHP3P0cE" target="_blank" rel="noopener">Lesson 23: Spring Framework. ORM</a></p>
 </li>
+<li>
+<p><a href="https://youtu.be/OMfUDSkanvA" target="_blank" rel="noopener">Lesson 24: Spring Framework: WebMVC</a></p>
+</li>
+<li>
+<p><a href="https://youtu.be/vs8SARbfR-s" target="_blank" rel="noopener">Lesson 25: Spring Framework: REST-service</a></p>
+</li>
 </ul>
 </div>
 </div>
@@ -2341,7 +2347,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-02-26 03:19:09 UTC
+Last updated 2022-03-03 11:41:25 UTC
 </div>
 </div>
 </body>
