deploy: fb551ce7f284f41de5702d69070575ec3e99772b

--- a/links.html
+++ b/links.html
@@ -596,7 +596,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="https://youtu.be/9gYTjb6ahCI" target="_blank" rel="noopener">Lesson 22: Spring Framework. Bean lifecycle</a></p>
 </li>
 <li>
-<p><a href="https://youtu.be/NeZKHP3P0cE" target="_blank" rel="noopener">Lesson 23: Spring Framework. ORM</a></p>
+<p><a href="https://youtu.be/bToPnAU-fmE" target="_blank" rel="noopener">Lesson 23: Spring Framework. ORM</a></p>
 </li>
 <li>
 <p><a href="https://youtu.be/OMfUDSkanvA" target="_blank" rel="noopener">Lesson 24: Spring Framework: WebMVC</a></p>
@@ -627,7 +627,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-03-03 11:41:25 UTC
+Last updated 2022-03-11 11:57:34 UTC
 </div>
 </div>
 </body>
