deploy: 39e2ff58ac985f80baf818df401e7117576ce8aa

--- a/index.html
+++ b/index.html
@@ -655,6 +655,18 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="https://youtu.be/vs8SARbfR-s" target="_blank" rel="noopener">Lesson 25: Spring Framework: REST-service</a></p>
 </li>
+<li>
+<p><a href="https://youtu.be/887IH9BXu_4" target="_blank" rel="noopener">Lesson 26: Spring Data</a></p>
+</li>
+<li>
+<p><a href="https://youtu.be/Fhlp95KXUCs" target="_blank" rel="noopener">Lesson 27: Spring REST Client</a></p>
+</li>
+<li>
+<p><a href="" target="_blank" rel="noopener">Lesson 28: Spring Security</a></p>
+</li>
+<li>
+<p><a href="" target="_blank" rel="noopener">Lesson 29: Spring Boot</a></p>
+</li>
 </ul>
 </div>
 </div>
@@ -2347,7 +2359,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-03-11 11:57:34 UTC
+Last updated 2022-03-23 12:18:28 UTC
 </div>
 </div>
 </body>
