--- a/links.html
+++ b/links.html
@@ -614,7 +614,25 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="" target="_blank" rel="noopener">Lesson 28: Spring Security</a></p>
 </li>
 <li>
-<p><a href="" target="_blank" rel="noopener">Lesson 29: Spring Boot</a></p>
+<p><a href="" target="_blank" rel="noopener">Lesson 29: Data Persistence. DB migration</a></p>
+</li>
+<li>
+<p><a href="" target="_blank" rel="noopener">Lesson 30: Spring Boot</a></p>
+</li>
+<li>
+<p><a href="" target="_blank" rel="noopener">Lesson 31: Tools. Mapping</a></p>
+</li>
+<li>
+<p><a href="" target="_blank" rel="noopener">Lesson 32: Spring Testing</a></p>
+</li>
+<li>
+<p><a href="" target="_blank" rel="noopener">Lesson 33: Tools. Logging</a></p>
+</li>
+<li>
+<p><a href="" target="_blank" rel="noopener">Lesson 34: Spring Framework. AOP</a></p>
+</li>
+<li>
+<p><a href="" target="_blank" rel="noopener">Lesson 35: Demo. Roadmap</a></p>
 </li>
 </ul>
 </div>
@@ -639,7 +657,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-03-23 12:18:28 UTC
+Last updated 2022-03-27 09:12:56 UTC
 </div>
 </div>
 </body>
