deploy: 2a6431f093d155d94d92ba3f60896af90d1e032a

--- a/index.html
+++ b/index.html
@@ -662,10 +662,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="https://youtu.be/Fhlp95KXUCs" target="_blank" rel="noopener">Lesson 27: Spring REST Client</a></p>
 </li>
 <li>
-<p><a href="" target="_blank" rel="noopener">Lesson 28: Spring Security</a></p>
+<p><a href="https://youtu.be/ezUL_xtZf58" target="_blank" rel="noopener">Lesson 28: Spring Security</a></p>
 </li>
 <li>
-<p><a href="" target="_blank" rel="noopener">Lesson 29: Data Persistence. DB migration</a></p>
+<p><a href="https://youtu.be/g2_b3kXMj78" target="_blank" rel="noopener">Lesson 29: Data Persistence. DB migration</a></p>
 </li>
 <li>
 <p><a href="" target="_blank" rel="noopener">Lesson 30: Spring Boot</a></p>
@@ -2377,7 +2377,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-03-27 09:12:56 UTC
+Last updated 2022-03-28 02:45:32 UTC
 </div>
 </div>
 </body>
