--- a/index.html
+++ b/index.html
@@ -671,16 +671,16 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="https://youtu.be/pCJ95QtHtyM" target="_blank" rel="noopener">Lesson 30: Spring Boot</a></p>
 </li>
 <li>
-<p><a href="" target="_blank" rel="noopener">Lesson 31: Tools. Mapping</a></p>
+<p><a href="https://youtu.be/rkV-zHOk63g" target="_blank" rel="noopener">Lesson 31: Tools. Mapping</a></p>
 </li>
 <li>
-<p><a href="" target="_blank" rel="noopener">Lesson 32: Spring Testing</a></p>
+<p><a href="https://youtu.be/9eb7pkxxMTI" target="_blank" rel="noopener">Lesson 32: Tools. Logging</a></p>
 </li>
 <li>
-<p><a href="" target="_blank" rel="noopener">Lesson 33: Tools. Logging</a></p>
+<p><a href="https://youtu.be/p5EgdAMGP_U" target="_blank" rel="noopener">Lesson 33: Spring Framework. AOP</a></p>
 </li>
 <li>
-<p><a href="" target="_blank" rel="noopener">Lesson 34: Spring Framework. AOP</a></p>
+<p><a href="" target="_blank" rel="noopener">Lesson 34: Spring Testing</a></p>
 </li>
 <li>
 <p><a href="" target="_blank" rel="noopener">Lesson 35: Demo. Roadmap</a></p>
@@ -2377,7 +2377,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-03-29 03:30:12 UTC
+Last updated 2022-04-10 12:30:44 UTC
 </div>
 </div>
 </body>
