deploy: 87267ad737d2e4a932dd547512d6b93166eb6898

--- a/links.html
+++ b/links.html
@@ -629,10 +629,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="https://youtu.be/p5EgdAMGP_U" target="_blank" rel="noopener">Lesson 33: Spring Framework. AOP</a></p>
 </li>
 <li>
-<p><a href="" target="_blank" rel="noopener">Lesson 34: Spring Testing</a></p>
+<p><a href="https://youtu.be/WI0mAhYueFI" target="_blank" rel="noopener">Lesson 34: Testing. Spring Testing. Validation</a></p>
 </li>
 <li>
-<p><a href="" target="_blank" rel="noopener">Lesson 35: Demo. Roadmap</a></p>
+<p><a href="https://youtu.be/aiLW3rg1RF8" target="_blank" rel="noopener">Lesson 35: Demo. Roadmap. Q&amp;A</a></p>
 </li>
 </ul>
 </div>
@@ -657,7 +657,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-04-10 12:30:44 UTC
+Last updated 2022-04-23 06:57:45 UTC
 </div>
 </div>
 </body>
